[package]
name = "plane_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.naga]
features = ["wgsl-in", "spv-out", "wgsl-out"]
version = "0.9.0"

[dependencies]
bevy = "0.7"
bevy_transform_gizmo = {git = "https://github.com/paxsethorld/bevy_transform_gizmo.git", branch = "main"}
bevy_mod_picking = "0.7.0"
bevy_mod_raycast = "0.5.0"
bevy_editor_pls = {path = "src/crates/bevy_editor_pls/crates/bevy_editor_pls"}
