[package]
name = "plane_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.naga]
features = ["wgsl-in", "spv-out", "wgsl-out"]
version = "0.9.0"

[dependencies]
#bevy = "0.7"
bevy = {git = "https://github.com/paxsethorld/bevy-fork.git", branch = "local-0-8-release", features = ["jpeg"]}

#bevy_transform_gizmo = {git = "https://github.com/paxsethorld/bevy_transform_gizmo.git", branch = "main"}
bevy_transform_gizmo = {git = "https://github.com/paxsethorld/bevy_transform_gizmo.git", branch = "silva"}

#bevy_mod_picking = "0.7.0"
bevy_mod_picking = {git = "https://github.com/paxsethorld/bevy_mod_picking.git", branch = "trial#2"} #updated for bevy 0.8

# bevy_editor_pls = {path = "src/crates/bevy_editor_pls-main/crates/bevy_editor_pls"}
# bevy-inspector-egui = {path = "src/crates/bevy-inspector-egui-main"}